# punk-records-inference

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SOURCE.md  llms.txt  pyproject.toml
assets/: README.md
bench/: README.md  audit_failures.py  build_phase_e_summary.py  build_research_reports.py  collect_store_stats.py  deploy_microscope_gx10.sh  deploy_model_gx10.sh  deploy_swap_gx10.sh  env.example  load_bench_env.sh  run_garble_investigation.sh  run_headroom_cp_sweep_gx10.sh  run_llama_cp20_pipeline.sh  run_model_matrix.sh  run_overnight.sh  run_parity_assumption_test.sh  run_phase_e_completion.sh  run_postfix_verify.sh  run_proof_completion.sh  run_remainder_proof.sh  run_rerun_failed.sh  run_suite.sh  wipe_memory.sh
docker/: Dockerfile  compose.gx10.yaml  compose.yaml  start.sh
docs/: AGENT_ROOM_HANDOFF.md  ANNOUNCE.md  ARCHITECTURE.md  BENCHMARKS.md  BENCH_DATA_PLAN.md  CLIENT_CONTRACT.md  DOCKER.md  ECONOMICS.md  JOURNEY.md  LICENSING.md  LIMITATIONS.md  MODEL_MATRIX.md  NLS_PIPELINE.md  OVERVIEW.md  PLATFORM.md  RESEARCH_LOG.md  SHIP_PLAN.md  SUPPORTED_MODELS.md  index.md
nls_vllm_plugin/: __init__.py  inject_geometry_audit.py  nls_admin_api.py
patches/: apply_patches.py  gdn_prefix_caching.patch
pri/: __init__.py  admin.py  auto_memory.py  capture.py  chain_resume.py  chat_template.py  chat_template_self_check.py  connector.py  format.py  inject_geometry_audit.py  kv_compress.py  layer_env.py  layer_names.py  memory_store.py  microscope_processor.py  resume.py  retrieve.py  rope_pack_balance.py  (+5 more)
(+137 files in other folders)
