[project]
name = "punk-records-inference"
version = "0.1.0"
description = "KV-state persistence layer for vLLM (Punk Records Inference)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Punk Records" }]

dependencies = [
  "torch",
  "zstandard",
]

[project.optional-dependencies]
retrieval = ["sentence-transformers"]
bench = ["requests"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pri*", "spec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
